tests/run-pass/semck/use-const.rs
const SIZE: int = 10;

fn main() {
    let a: int = SIZE + 1;
}