tests/compile-fail/typeck/invalid-assign.rs
fn main() {
    let a: int = 0;

    a = 'a';  //! ERROR(4:9): type mismatch: expected int, got char
}